# record-consolidation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  t.ipynb  t_improve_record_consolidation.ipynb  t_improve_record_consolidation2.ipynb  t_improve_record_consolidation5.ipynb  tt.ipynb
notes/: normalize_subset_performance.md
sandbox/: jpmorgans.csv  kmeans.ipynb  t_improve_record_consolidation2.ipynb  t_improve_record_consolidation5.ipynb
src/record_consolidation/: __init__.py  _typing.py  df_consolidations.py  graphs.py  utils.py
src/record_consolidation/subgraph_post_processing/: __init__.py  apply_alg_to_subgraphs.py  validate_post_processor.py
src/record_consolidation/subgraph_post_processing/specific_algs/: partition_companies.py  partition_via_cluster_ensemble.py  specific_partitioning_algs.py  split_high_betweenness.py
src/record_consolidation/utils/: draw_graph.py  graphs.py  polars_df.py
test_data/: intra_and_inter_consolidated_msfts_unique.csv  intra_consolidated_msfts_unique.csv  msfts_and_amzns.csv
test_data/intra_and_inter_field/: processed.parquet
test_data/intra_field/: msfts_and_amzns.parquet  processed.parquet
test_data/normalize_subset/: comparison.csv  input.parquet  processed.parquet
tests/: test_apply_alg_to_subgraphs.py  test_consolidations.py  test_graphs.py
