[project]
name = "record-consolidation"
version = "0.1.0"
description = "Consolidate records across linkages."
authors = [
    { name = "Mikhael Gaster", email = "mikhaelgaster@gmail.com" }
]
dependencies = [
    "networkx>=3.3",
    "polars>=1.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.5",
    "black>=24.8.0",
    "mypy>=1.11.2",
    "isort>=5.13.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/record_consolidation"]
