[project]
name = "record-consolidation"
version = "0.1.0"
description = "Consolidate records across linkages."
authors = [
    { name = "Mikhael Gaster", email = "mikhaelgaster@gmail.com" }
]
dependencies = [
    "networkx>=3.3",
    "polars>=1.7.1",
    "regression-tester @ git+https://github.com/m-gaster/regression-tester",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"


[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.5",
    "black>=24.8.0",
    "mypy>=1.11.2",
    "isort>=5.13.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "ipykernel>=6.29.5",
    "regression-tester @ git+https://github.com/m-gaster/regression-tester",
    "icecream>=2.1.3",
]

[tool.mypy]
ignore_missing_imports = true


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/record_consolidation"]
